# SOM_plus_clustering

./: .gitignore  Cargo.toml  LICENSE.txt  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  build.rs  he_initialization.py  kmeans.py  main.py  naive_sharding.py  prototype.ipynb  pytest.ini  quickstart.sh  readme.md  requirements.txt  setup.py  som.py  som_model.pkl  test.ipynb  test.py  test_optimizations.py  test_som.py  utils.py  zerO_initialization.py
.github/workflows/: rust.yml
benches/: bench_kmeans.rs  bench_som.rs
docs/: index.md
docs/api/: evals.md  initialization.md  kde_kernel.md  kmeans.md  model_picker.md  som.md  som_classification.md  utils.md  variables.md
docs/examples/: basic_clustering.md  classification.md  model_selection.md
docs/paper/: gen_analysis_figures.py  gen_figures.py  som_tsk_paper.tex
docs/superpowers/plans/: 2026-03-21-rust-migration.md  2026-03-22-autosom-improvements.md  2026-03-22-densom.md
docs/superpowers/specs/: 2026-03-21-rust-migration-design.md  2026-03-22-autosom-improvements-design.md  2026-03-22-densom-design.md
examples/: benchmark.rs  benchmark_quality.rs
experiments/: compare.py  generate_datasets.py
experiments/benchmark/: compare_umap.py  dataset_config.json  evaluate.py  generate.py  report.py  report_densom.py  umap_evaluate.py  umap_preprocess.py
experiments/benchmark/datasets/: a1.csv  a2.csv  a3.csv  anisotropic.csv  breast_cancer.csv  circles.csv  dim_128.csv  dim_32.csv  dim_64.csv  iris.csv  moons.csv  s1.csv  s2.csv  s3.csv  s4.csv  scale_10k.csv  scale_1k.csv  scale_50k.csv  scale_5k.csv  spiral.csv  varied_density.csv  wine.csv
experiments/benchmark/results/: a1_auto_labels.csv  a1_densom_labels.csv  a1_som_labels.csv  a2_auto_labels.csv  a2_densom_labels.csv  a2_km_labels.csv  a2_som_labels.csv  a3_auto_labels.csv  a3_densom_labels.csv  a3_som_labels.csv  anisotropic_auto_labels.csv  anisotropic_densom_labels.csv  anisotropic_som_labels.csv  (+76 more)
experiments/datasets/: blobs.csv  digits.csv
experiments/python/: run.py
experiments/results/: python_results.json  rust_results.json
kde_kernel/: kde_kernel.py  prototype.ipynb
models/: som_model.pkl
modules/: __init__.py  evals.py  initialization.py  kde_kernel.py  kmeans.py  model_picker.py  som.py  som_classification.py  utils.py  variables.py
som-api/: Cargo.toml
som-api/src/: main.rs
som-ui/: index.html  package-lock.json  package.json
som-ui/src/: App.css  App.tsx  index.css
src/: error.rs  lib.rs  serialize.rs
src/backend/: cpu.rs  cuda.rs  metal.rs  mod.rs
src/core/: autosom.rs  densom.rs  distance.rs  evals.rs  gmm.rs  init.rs  kde.rs  kmeans.rs  mod.rs  model_picker.rs  neighborhood.rs  optimized_math.rs  som.rs  som_classification.rs
test_case/: classification_test.py  clustering_test.py
tests/: __init__.py  conftest.py  densom_integration.rs  test_evals.py  test_evals.rs  test_initialization.py  test_kde_kernel.py  test_kmeans.py  test_kmeans.rs  test_model_picker.py  test_serialization.rs  test_som.py  test_som.rs  test_som_basic.py  test_som_classification.py  test_utils.py  test_utils_one_hot.py  test_variables.py
(+89 files in other folders)
