[package]
name = "som-api"
version = "0.1.0"
edition = "2021"

[dependencies]
som_plus_clustering = { path = "..", features = ["metal"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
